kube/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: kai-ui
  labels:
    app: ui
spec:
  type: NodePort  # or LoadBalancer if you want an external IP
  selector:
    app: ui
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
