kube/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: kai-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - welcome.aiflow.hosteur.cloud
      secretName: welcome-aiflow-tls
  rules:
    - host: welcome.aiflow.hosteur.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 3000
